--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-     <title>Vai Corinthians</title>
+     <title>Meu primeiro projeto</title>
    </head>
 
    
